feat(routes): add /id route
